corrected spacing on the input comment bar on tablet and desktop

--- a/src/App.scss
+++ b/src/App.scss
@@ -63,6 +63,7 @@
   flex-direction: column;
   padding: 0 1rem;
   @include tablet {
+    width: 95%;
     margin: 0 2rem;
     padding-left: 1rem ;
   }
